sync feature added